[gd_scene load_steps=13 format=2]

[ext_resource path="res://files/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/class_selection.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/universal/skill_frame.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/universal/skill_frame_hover.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/universal/skill_frame_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/images/iconsclasses/Sex_Toy.png" type="Texture" id=6]
[ext_resource path="res://assets/themes/Checkbox&Tabs.tres" type="Theme" id=7]
[ext_resource path="res://src/ClassInformationPanel.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/CursiveFont.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/images/iconsclasses/Master.png" type="Texture" id=10]
[ext_resource path="res://assets/images/gui/slavepanel/portrait_frame.png" type="Texture" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]

[node name="class_learn" type="Panel"]
margin_left = 267.0
margin_top = 43.0
margin_right = 1519.0
margin_bottom = 890.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="categories" type="VBoxContainer" parent="."]
margin_left = 23.4036
margin_top = 27.161
margin_right = 100.404
margin_bottom = 441.161

[node name="all" type="Button" parent="categories"]
margin_right = 77.0
margin_bottom = 38.2509
hint_tooltip = "Hint"
toggle_mode = true
text = "All"

[node name="social" type="Button" parent="categories"]
margin_top = 42.0
margin_right = 77.0
margin_bottom = 80.2509
hint_tooltip = "Social"
toggle_mode = true
text = "Soc"

[node name="labor" type="Button" parent="categories"]
margin_top = 84.0
margin_right = 77.0
margin_bottom = 122.251
hint_tooltip = "Labor"
toggle_mode = true
text = "Lab"

[node name="sexual" type="Button" parent="categories"]
margin_top = 126.0
margin_right = 77.0
margin_bottom = 164.251
hint_tooltip = "Sexuals"
toggle_mode = true
text = "Sex"

[node name="combat" type="Button" parent="categories"]
margin_top = 168.0
margin_right = 77.0
margin_bottom = 206.251
hint_tooltip = "Combat"
toggle_mode = true
text = "Com"

[node name="magic" type="Button" parent="categories"]
margin_top = 210.0
margin_right = 77.0
margin_bottom = 248.251
hint_tooltip = "Magic"
toggle_mode = true
text = "Mag"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 108.0
margin_top = 50.0
margin_right = 1160.0
margin_bottom = 752.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
columns = 7

[node name="Button" type="TextureButton" parent="ScrollContainer/GridContainer"]
editor/display_folded = true
visible = false
self_modulate = Color( 1, 1, 1, 0.635294 )
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/GridContainer/Button"]
show_behind_parent = true
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 6 )
expand = true

[node name="name" type="Label" parent="ScrollContainer/GridContainer/Button"]
margin_left = 5.0
margin_top = 6.0
margin_right = 147.0
margin_bottom = 30.0
align = 1
autowrap = true

[node name="Label" type="Label" parent="."]
margin_left = 118.897
margin_top = 12.4618
margin_right = 472.897
margin_bottom = 37.4618
text = "Classes"
align = 1

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 509.0
margin_top = 800.0
margin_right = 709.0
margin_bottom = 841.0
theme = ExtResource( 7 )
text = "Show Locked"

[node name="ClassPanel" type="Panel" parent="."]
visible = false
margin_left = 249.0
margin_top = -9.0
margin_right = 1004.0
margin_bottom = 924.0
theme = ExtResource( 1 )
script = ExtResource( 8 )

[node name="Control" type="Control" parent="ClassPanel"]
margin_left = -586.0
margin_top = -134.052
margin_right = 1363.0
margin_bottom = 970.948

[node name="Panel" type="Panel" parent="ClassPanel"]
margin_top = 588.0
margin_right = 755.0
margin_bottom = 853.0

[node name="descript" type="RichTextLabel" parent="ClassPanel"]
margin_left = 24.0
margin_top = 611.0
margin_right = 732.0
margin_bottom = 833.0
custom_fonts/normal_font = ExtResource( 9 )
custom_colors/default_color = Color( 1, 0.721569, 0.196078, 1 )
bbcode_enabled = true

[node name="TextureRect" type="TextureRect" parent="ClassPanel"]
margin_left = 11.0
margin_top = 5.08066
margin_right = 261.0
margin_bottom = 255.081
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="TextureRect" type="TextureRect" parent="ClassPanel/TextureRect"]
margin_left = -5.0
margin_top = -1.0
margin_right = 252.0
margin_bottom = 252.0
texture = ExtResource( 11 )
expand = true

[node name="name" type="Label" parent="ClassPanel/TextureRect"]
margin_left = 362.424
margin_top = 12.3781
margin_right = 570.424
margin_bottom = 36.3781
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "name"
align = 1
valign = 1

[node name="reqs" type="RichTextLabel" parent="ClassPanel"]
margin_left = 13.0
margin_top = 278.0
margin_right = 326.0
margin_bottom = 567.0
bbcode_enabled = true

[node name="bonus" type="RichTextLabel" parent="ClassPanel"]
margin_left = 272.0
margin_top = 57.0
margin_right = 687.0
margin_bottom = 295.0
bbcode_enabled = true

[node name="SocialSkills" type="ScrollContainer" parent="ClassPanel"]
margin_left = 339.622
margin_top = 340.904
margin_right = 737.622
margin_bottom = 440.904
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ClassPanel/SocialSkills"]
margin_right = 398.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="TextureRect" parent="ClassPanel/SocialSkills/HBoxContainer"]
visible = false
margin_left = 161.0
margin_right = 236.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 12 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ClassPanel/SocialSkills/HBoxContainer/Button"]
margin_right = 76.0
margin_bottom = 75.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="CombatSkills" type="ScrollContainer" parent="ClassPanel"]
margin_left = 336.622
margin_top = 483.904
margin_right = 734.622
margin_bottom = 583.904
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ClassPanel/CombatSkills"]
margin_right = 398.0
size_flags_horizontal = 3
alignment = 1

[node name="Button" type="TextureRect" parent="ClassPanel/CombatSkills/HBoxContainer"]
visible = false
margin_left = 161.0
margin_right = 236.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
texture = ExtResource( 12 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ClassPanel/CombatSkills/HBoxContainer/Button"]
margin_right = 76.0
margin_bottom = 75.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="SocialLabel" type="Label" parent="ClassPanel"]
margin_left = 474.57
margin_top = 309.418
margin_right = 603.57
margin_bottom = 334.418
text = "Social Skills"

[node name="CombatLabel" type="Label" parent="ClassPanel"]
margin_left = 458.782
margin_top = 450.144
margin_right = 611.782
margin_bottom = 475.144
text = "Combat Skills"

[node name="Unlock" type="Button" parent="ClassPanel"]
margin_left = 429.306
margin_top = 862.288
margin_right = 635.306
margin_bottom = 915.288
text = "Unlock"

[node name="ExpLabel" type="Label" parent="ClassPanel"]
margin_left = 64.0
margin_top = 875.0
margin_right = 351.0
margin_bottom = 899.0
text = "Experience: "
